# Building-REST-API-on-FastAPI

./: .env.example  .gitignore  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 1467b6ef2a3f_init_avatar_user.py  282e64fb86ce_now_init.py  493d8568042c_init_birthday.py  83c3b6812c03_init_role.py  9a665485bb8c_initial.py  9ff372a68fda_init_verificate_email.py  a4574f8defb3_init_users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/servises/: auth.py  email.py  role.py
src/servises/templates/: verify_email.html
tests/: conftest.py  test.db  test_e2e_routers_auth.py  test_e2e_routers_contacts.py  test_e2e_routers_users.py  test_unit_repository_contacts.py
