[tool.poetry]
name = "web_hw11"
version = "0.1.0"
description = ""
authors = ["dmitriy <kylishovdimka@ukr.net>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
fastapi = "^0.110.1"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.29"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.0"}
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
fastapi-mail = "^1.4.1"
redis = "^5.0.4"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.40.0"
Sphinx = "^7.3.7"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
